# HelloSales

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  setup.sh
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  supabase_schema.sql  supabase_seed_skills.sql  test_voice_minimal.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  main.py
backend/app/ai/: __init__.py
backend/app/ai/agents/: __init__.py  conversational.py
backend/app/ai/pipelines/: __init__.py  definitions.py
backend/app/ai/providers/: __init__.py  base.py  factory.py  registry.py
backend/app/ai/stageflow/: __init__.py  events.py  pipeline.py  stages.py
backend/app/ai/stages/: __init__.py
backend/app/ai/substrate/: __init__.py  observability.py
backend/app/ai/validation/: __init__.py
backend/app/api/admin/: __init__.py  assessments.py  benchmarks.py  feedback.py  router.py  stats.py  triage_datasets.py
backend/app/api/http/: __init__.py  account.py  auth.py  dependencies.py  feedback.py  legal.py  orgs.py  profile.py  progress.py  pulse.py  sailwind.py  test.py
backend/app/api/ws/: __init__.py  endpoint.py  manager.py  projector.py  router.py
backend/app/auth/: __init__.py  identity.py  workos.py
backend/app/core/: __init__.py  di.py
backend/app/defaults/: __init__.py
backend/app/domains/assessment/: __init__.py  benchmark.py  meta_summary.py  pipeline.py  progress.py  service.py  summary.py  triage.py
backend/app/domains/chat/: __init__.py  pipeline_service.py  service.py
backend/app/domains/feedback/: service.py
backend/app/domains/organization/: service.py
backend/app/domains/profile/: service.py
backend/app/domains/sailwind/: playbook.py  (+1 more)
backend/app/infrastructure/: __init__.py  database.py  dead_letter_queue.py  golden_dataset.py  logging.py  pricing.py
backend/app/models/: __init__.py  assessment.py  eval.py  feedback.py  interaction.py  meta_summary.py  observability.py  organization.py  profile.py  sailwind_playbook.py  sailwind_practice.py  session.py  session_state.py  skill.py  summary.py  triage_annotation.py  user.py
backend/app/ports/: __init__.py  adapters.py
backend/app/prompts/: __init__.py  onboarding.py
backend/app/schemas/: __init__.py  agent_output.py  assessment.py  eval.py  feedback.py  legal.py  meta_summary.py  organization.py  profile.py  progress.py  sailwind_playbook.py  sailwind_practice.py  skill.py  triage_annotation.py
backend/app/scripts/: validate_topology.py
backend/app/services/: __init__.py  events.py  logging.py  session_state.py
backend/migrations/: env.py
backend/migrations/versions/: 20250105_1500_0001_initial_initial-enterprise-schema.py
backend/scripts/: migrate_stages.py  seed_assessment_history.py  seed_skills.py
backend/tests/: __init__.py  conftest.py  contract_assertions.py
backend/tests/curl/: seed_test_data.py  test_assessment.sh  test_triage.sh
backend/tests/scripts/: __init__.py  general_chatter.py  skill_attempt.py
project/: .dockerignore  .env.example  BACKEND_REBUILD_PLAN.md  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
project/app/: __init__.py  config.py  main.py
project/app/domain/: __init__.py  errors.py
project/app/infrastructure/: __init__.py
project/app/pipelines/: __init__.py
project/app/presentation/: __init__.py
project/migrations/: env.py
project/migrations/versions/: 001_initial_schema.py  98fcb1efe023_initial_schema.py
project/tests/: __init__.py  conftest.py
(+319 files in other folders)
