[project]
name = "hellosales-backend"
version = "0.1.0"
description = "HelloSales - Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    
    # Validation & Settings
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    
    # Authentication
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.26.0",
    
    # Redis
    "redis>=5.0.1",
    
    # AI Providers
    "groq>=0.4.0",
    "google-generativeai>=0.8.0",
    "google-genai>=0.6.0",
    "deepgram-sdk>=0.9.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "markdown>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
# Run tests with shorter timeouts
addopts = "--tb=line --disable-warnings -p no:warnings"

